[package]
name = "subxt-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
autotests = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Generate types and helpers for interacting with Substrate runtimes."

[features]
web = ["subxt-codegen/web"]
runtime-path = ["polkadot-sdk"]

[lib]
proc-macro = true

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }
darling = { workspace = true }
proc-macro-error2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
subxt-codegen = { workspace = true, features = ["fetch-metadata"] }
scale-typegen = { workspace = true }
polkadot-sdk = { workspace = true, optional = true, features = ["sp-io", "sc-executor-common", "sp-state-machine", "sp-maybe-compressed-blob", "sc-executor"] }

[lints]
workspace = true