[package]
name = "subxt-macro"
version = "0.43.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
autotests = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Generate types and helpers for interacting with Substrate runtimes."

[features]
web = ["subxt-codegen/web"]
runtime-wasm-path = ["sc-executor", "sc-executor-common", "sp-maybe-compressed-blob", "sp-io", "sp-state-machine"]
runtime-metadata-insecure-url = ["subxt-utils-fetchmetadata/url"]

[lib]
proc-macro = true

[dependencies]
codec = { package = "parity-scale-codec", workspace = true }
darling = { workspace = true }
proc-macro-error2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
subxt-codegen = { workspace = true }
subxt-metadata = { workspace = true }
subxt-utils-fetchmetadata = { workspace = true }
scale-typegen = { workspace = true }
sc-executor = { workspace = true, optional = true }
sc-executor-common = { workspace = true, optional = true }
sp-maybe-compressed-blob = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-state-machine = { workspace = true, optional = true }

[lints]
workspace = true