[package]
name = "subxt-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
autotests = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Command line utilities for checking metadata compatibility between nodes."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-metadata = { version = "15.1.0", features = ["v14", "v15-unstable", "std"] }
scale-info = "2.7.0"
sp-core-hashing = "8.0.0"

[dev-dependencies]
bitvec = { workspace = true, features = ["alloc"] }
criterion = { workspace = true }
scale-info = { workspace = true, features = ["bit-vec"] }

[lib]
# Without this, libtest cli opts interfere with criteron benches:
bench = false

[[bench]]
name = "bench"
harness = false
