[package]
name = "subxt-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = true
autotests = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Command line utilities for checking metadata compatibility between nodes."

[features]
default = ["std"]
std = ["scale-info/std", "frame-metadata/std"]

[dependencies]
scale-info = { workspace = true, default-features = false }
frame-metadata = { workspace = true, default-features = false, features = ["current", "decode"] }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
sp-core-hashing = { workspace = true }
hashbrown = { workspace = true }
derive_more = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
bitvec = { workspace = true, features = ["alloc"] }
criterion = { workspace = true }
scale-info = { workspace = true, features = ["bit-vec"] }
assert_matches = { workspace = true }

[lib]
# Without this, libtest cli opts interfere with criteron benches:
bench = false

[[bench]]
name = "bench"
harness = false
