[package]
name = "substrate-subxt-proc-macro"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>", "Parity Technologies <admin@parity.io>"]
edition = "2018"
autotests = false

license = "GPL-3.0"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Derive calls, events, storage and tests for interacting Substrate modules with substrate-subxt"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
proc-macro2 = "1.0.19"
proc-macro-crate = "0.1.5"
proc-macro-error = "1.0.4"
quote = "1.0.7"
syn = "1.0.38"
synstructure = "0.12.4"

[dev-dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
env_logger = "0.7.1"
pretty_assertions = "0.6.1"
sp-keyring = "2.0.0-rc6"
substrate-subxt = { path = ".." }
trybuild = "1.0.32"

[[test]]
name = "balances"
path = "tests/balances.rs"
